<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="General">
        <Preference
                app:iconSpaceReserved="false"
                app:key="@string/key_auto_wallpaper"
                app:title="@string/text_auto_wallpaper"/>
        <SwitchPreference
                app:title="@string/text_night_mode"
                app:allowDividerAbove="true"
                app:key="@string/key_night_mode_switch"
                app:iconSpaceReserved="false"/>
        <Preference
                app:iconSpaceReserved="false"
                app:allowDividerAbove="true"
                app:key="@string/key_clear_cache"
                app:title="@string/text_clear_cache"/>
        <Preference
                app:iconSpaceReserved="false"
                app:allowDividerAbove="true"
                app:key="@string/key_clear_data"
                app:title="@string/text_clear_data"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/text_support_development">
        <Preference
            app:iconSpaceReserved="false"
            app:title="@string/text_rate_this_app"
            app:key="@string/key_rate_app"
            app:summary="@string/text_rate_app_summary"/>
        <Preference
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:title="@string/text_report_bugs"
            app:key="@string/key_report_bugs"
            app:summary="@string/text_report_bugs_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
            app:iconSpaceReserved="false"
            app:title="@string/text_about">
        <Preference
                app:iconSpaceReserved="false"
                app:title="@string/text_author"
                app:summary="@string/text_author_summary"
                app:key="@string/key_author"/>
        <Preference
                app:iconSpaceReserved="false"
                app:allowDividerAbove="true"
                app:title="@string/text_powered_by_unsplash"
                app:summary="@string/text_powered_by_summary"
                app:key="@string/key_unsplash_page"/>
        <Preference
                app:iconSpaceReserved="false"
                app:allowDividerAbove="true"
                app:key="@string/key_github_page"
                app:summary="@string/text_github_summary"
                app:title="@string/text_github"/>
        <Preference
                app:iconSpaceReserved="false"
                app:allowDividerAbove="true"
                app:summary="1.0.0"
                app:key="@string/key_app_version"
                app:title="@string/text_app_version"/>
    </PreferenceCategory>
</PreferenceScreen>