<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/photo_menu_open_link"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_open_in_browser_white_24dp"
            android:title="@string/text_open_link"/>
    <item
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/text_share">
        <menu>
            <item
                    android:title="@string/text_share_link"
                    android:id="@+id/photo_menu_share_link"/>
            <item
                    android:title="@string/text_share_image"
                    android:id="@+id/photo_menu_share_image"/>
        </menu>
    </item>
</menu>