<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <com.google.android.material.button.MaterialButton
            android:id="@+id/download_small"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/text_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/download_medium"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/text_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/download_large"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/text_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/download_original"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/text_original_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>