<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unsplash_search_filter_dialog_tv_search_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/white"
            android:text="@string/text_search_filter"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <View
            android:id="@+id/unsplash_search_filter_dialog_divider_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unsplash_search_filter_dialog_tv_search_filter"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unsplash_search_filter_dialog_tv_sort_by"
            android:text="@string/text_sort_by"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unsplash_search_filter_dialog_divider_1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
    <RelativeLayout
            android:id="@+id/unsplash_search_filter_dialog_container_1"
            app:layout_constraintStart_toEndOf="@id/unsplash_search_filter_dialog_tv_sort_by"
            app:layout_constraintTop_toTopOf="@id/unsplash_search_filter_dialog_tv_sort_by"
            app:layout_constraintBottom_toBottomOf="@id/unsplash_search_filter_dialog_tv_sort_by"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <Spinner
                android:id="@+id/unsplash_search_filter_dialog_spinner_order_by"
                android:entries="@array/order_by_values"
                style="?android:attr/spinnerDropDownItemStyle"
                tools:listitem="@layout/unsplash_search_filter_dialog_spinner_item"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ImageView
                android:src="@drawable/ic_expand_more_black_24dp"
                android:layout_alignParentEnd="true"
                android:tint="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unsplash_search_filter_dialog_tv_content_filter"
            android:text="@string/text_content_filter"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unsplash_search_filter_dialog_tv_sort_by"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
    <RelativeLayout
            android:id="@+id/unsplash_search_filter_dialog_container_2"
            app:layout_constraintTop_toTopOf="@id/unsplash_search_filter_dialog_tv_content_filter"
            app:layout_constraintBottom_toBottomOf="@id/unsplash_search_filter_dialog_tv_content_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/unsplash_search_filter_dialog_tv_content_filter"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <Spinner
                android:id="@+id/unsplash_search_filter_dialog_spinner_content_filter"
                android:entries="@array/content_filter_values"
                style="?android:attr/spinnerDropDownItemStyle"
                tools:listitem="@layout/unsplash_search_filter_dialog_spinner_item"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ImageView
                android:src="@drawable/ic_expand_more_black_24dp"
                android:layout_alignParentEnd="true"
                android:tint="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unsplash_search_filter_dialog_tv_color"
            android:text="@string/text_color"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unsplash_search_filter_dialog_tv_content_filter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
    <RelativeLayout
            android:id="@+id/unsplash_search_filter_dialog_container_3"
            app:layout_constraintTop_toTopOf="@id/unsplash_search_filter_dialog_tv_color"
            app:layout_constraintBottom_toBottomOf="@id/unsplash_search_filter_dialog_tv_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/unsplash_search_filter_dialog_tv_color"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <Spinner
                android:id="@+id/unsplash_search_filter_dialog_spinner_color"
                android:entries="@array/color_values"
                style="?android:attr/spinnerDropDownItemStyle"
                tools:listitem="@layout/unsplash_search_filter_dialog_spinner_item"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ImageView
                android:src="@drawable/ic_expand_more_black_24dp"
                android:layout_alignParentEnd="true"
                android:tint="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/unsplash_search_filter_dialog_container_4"
            app:layout_constraintStart_toStartOf="@id/unsplash_search_filter_dialog_container_3"
            app:layout_constraintTop_toBottomOf="@id/unsplash_search_filter_dialog_container_3"
            app:layout_constraintEnd_toEndOf="@id/unsplash_search_filter_dialog_container_3"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorBlack"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorBlack"
                    android:backgroundTintMode="add"
                    android:checked="true"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorWhite"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorWhite"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorYellow"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorYellow"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorOrange"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorOrange"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorRed"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorRed"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorPurple"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorPurple"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorMagenta"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorMagenta"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorGreen"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorGreen"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorTeal"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorTeal"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/filterColorBlue"
                    android:button="@android:color/transparent"
                    android:background="@drawable/custom_color_radio_button"
                    android:backgroundTint="@color/colorBlue"
                    android:backgroundTintMode="add"
                    android:layout_marginEnd="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unsplash_search_filter_dialog_tv_orientation"
            android:text="@string/text_orientation"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unsplash_search_filter_dialog_container_4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
    <RelativeLayout
            android:id="@+id/unsplash_search_filter_dialog_container_5"
            app:layout_constraintTop_toTopOf="@id/unsplash_search_filter_dialog_tv_orientation"
            app:layout_constraintBottom_toBottomOf="@id/unsplash_search_filter_dialog_tv_orientation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/unsplash_search_filter_dialog_tv_orientation"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <Spinner
                android:id="@+id/unsplash_search_filter_dialog_spinner_orientation"
                android:entries="@array/orientation_values"
                style="?android:attr/spinnerDropDownItemStyle"
                tools:listitem="@layout/unsplash_search_filter_dialog_spinner_item"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"
                android:layout_alignParentEnd="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <ImageView
                android:src="@drawable/ic_expand_more_black_24dp"
                android:layout_alignParentEnd="true"
                android:tint="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
            android:id="@+id/unsplash_search_filter_dialog_divider_2"
            app:layout_constraintTop_toBottomOf="@id/unsplash_search_filter_dialog_tv_orientation"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/unsplash_search_filter_dialog_btn_apply"
            android:text="@string/text_apply"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/unsplash_search_filter_dialog_divider_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/unsplash_search_filter_dialog_btn_cancel"
            android:text="@string/text_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/unsplash_search_filter_dialog_divider_2"
            app:layout_constraintEnd_toStartOf="@id/unsplash_search_filter_dialog_btn_apply"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>